Add SignalR Hub and some Repos

--- a/02.00-ServiceLayer/02.00-ServiceLayer.csproj
+++ b/02.00-ServiceLayer/02.00-ServiceLayer.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\03.00-RepositoryLayer\03.00-RepositoryLayer.csproj" />
   </ItemGroup>
 
