--- a/05.00-ShareResource/05.00-ShareResource.csproj
+++ b/05.00-ShareResource/05.00-ShareResource.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\Room\" />
+  </ItemGroup>
+
 </Project>
