--- a/01.00-API/appsettings.Development.json
+++ b/01.00-API/appsettings.Development.json
@@ -6,9 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "InMemory": "true",     
-    //"InMemory": "false",
-    "Default": "Server=DESKTOP-596ASLR\\MSSQLSERVER2019;Database=GroupStudySU23;Trusted_Connection=True;"
+    //"InMemory": "true",     
+    "InMemory": "false",
+    //"Default": "Server=DESKTOP-596ASLR\\MSSQLSERVER2019;Database=GroupStudySU23;Trusted_Connection=True;",
+    "Default": "Server=DESKTOP-596ASLR\\MSSQLSERVER2019;Database=GroupStudySU23Temp;Trusted_Connection=True;"
   },
   "Authentication": {
     "JwtToken": {
