Rework Mass Schedule api

--- a/05.00-ShareResource/05.00-ShareResource.csproj
+++ b/05.00-ShareResource/05.00-ShareResource.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\NewFolder\" />
+    <Folder Include="DTO\Schedule\" />
   </ItemGroup>
 
 </Project>
