--- a/01.00-API/Properties/launchSettings.json
+++ b/01.00-API/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:8000;http://localhost:8001",
+      //"applicationUrl": "https://localhost:8000;https://localhost:8001",
+      "applicationUrl": "http://localhost:8000;http://localhost:8001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
