Add ban student api

--- a/01.00-API/appsettings.Development.json
+++ b/01.00-API/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    //"InMemory": "true",
-    "InMemory": "false",
+    "InMemory": "true",
+    //"InMemory": "false",   
     //"Default": "Server=DESKTOP-596ASLR\\MSSQLSERVER2019;Database=GroupStudySU23;Trusted_Connection=True;",
     //"Default": "Server=DESKTOP-596ASLR\\MSSQLSERVER2019;Database=GroupStudySU23Temp;Trusted_Connection=True;",
     "Default": "Server=DESKTOP-596ASLR\\MSSQLSERVER2019;Database=GroupStudySU23NewDb;Trusted_Connection=True;"
