--- a/01.00-API/appsettings.Development.json
+++ b/01.00-API/appsettings.Development.json
@@ -42,5 +42,21 @@
       }
     }
   },
+  "Emailconfiguration": {
+    "From": "groupstudysystem@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "groupstudysystem@gmail.com",
+    "Password": "a123456789!",
+    "AppPassword": "wzbhwcezrjrlrmoh"
+  },
+  //"EmailConfiguration": {
+  //  "From": "vinflatsystem@gmail.com",
+  //  "SmtpServer": "smtp.gmail.com",
+  //  "Port": 465,
+  //  "Username": "vinflatsystem@gmail.com",
+  //  "Password": "a123456789!",
+  //  "AppPassword": "oeitjxwkewkyftih"
+  //},
   "AllowedHosts": "*"
 }
