--- a/01.00-API/appsettings.json
+++ b/01.00-API/appsettings.json
@@ -40,5 +40,13 @@
       }
     }
   },
+  "EmailConfiguration": {
+    "From": "groupstudysystem@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "groupstudysystem@gmail.com",
+    "Password": "a123456789!",
+    "AppPassword": "wzbhwcezrjrlrmoh"
+  },
   "AllowedHosts": "*"
 }
