--- a/02.00-ServiceLayer/02.00-ServiceLayer.csproj
+++ b/02.00-ServiceLayer/02.00-ServiceLayer.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
+    <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
