Add Scheduler base code

--- a/01.01-APIExtension/01.01-APIExtension.csproj
+++ b/01.01-APIExtension/01.01-APIExtension.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\02.00-ServiceLayer\02.00-ServiceLayer.csproj" />
   </ItemGroup>
 
