fix upload file, using fileserver to store file

--- a/01.00-API/01.00-API.csproj
+++ b/01.00-API/01.00-API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\02.00-ServiceLayer\02.00-ServiceLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UploadFile\" />
+  </ItemGroup>
+
 </Project>
